# bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  alembic.ini  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
alembic/: env.py
alembic/versions/: 70a97e16f0f4_ai_decisions_m9_live_ai_activity.py  842452e9d525_init_positions_closed_trades_risk_state_.py  8c1f2a9d3b41_route_on_positions_closed_trades.py  b7d4e2c91a55_mark_to_market_and_partials.py  e3a91b7c2d10_snapshot_on_ai_decisions.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  style.css
dashboard/src/components/: bits.tsx  charts.tsx  modal.tsx
dashboard/src/pages/: Analytics.tsx  Login.tsx  Overview.tsx  Status.tsx  Trades.tsx
docs/: API-KEYS.md
docs/plans/: 2026-06-28-m1-scanner-refactor.md  2026-06-28-m2-wire-zetryn-trading.md  2026-07-01-m3-orchestration-runtime.md  2026-07-04-m4-execution-layer.md  2026-07-04-m5-wallet-management.md  2026-07-05-m6-persistence.md  2026-07-05-m7-observability.md  2026-07-10-m8-deployment.md  2026-07-11-m10a-exit-intelligence.md  2026-07-12-m10b-entry-routing.md  2026-07-12-m10c-event-driven-agents.md  2026-07-12-m9-dashboard.md  2026-07-13-m12-strategy-routing.md  2026-07-15-pre-golive-worklist.md  2026-07-17-strategy-rework-focus.md  README.md
scripts/: commit-as.sh  deploy.sh  gmgn_check.py  m10b_smoke.py  m1_smoke.py  m2_smoke.py  m3_smoke.py  m4_smoke.py  m5_smoke.py  m6_smoke.py  m7_smoke.py  telegram_login.py  wallet_init.py
tests/: conftest.py  test_adapter_token_input.py  test_ai_activity_sink.py  test_api.py  test_balance_cache.py  test_config.py  test_dedup.py  test_execution_sink.py  test_lifecycle_engine.py  test_live_executor.py  test_llm_wiring.py  test_log_bridge.py  test_m12_gates.py  test_notify.py  test_orchestrator.py  test_paper_executor.py  test_pipeline.py  test_pipeline_integration.py  test_position_repo.py  test_position_tracker.py  test_postgres_store.py  test_pumpcurve.py  test_pumpfun_parser.py  test_reconciliation.py  test_registry.py  test_risk.py  test_risk_repo.py  test_routing.py  test_sniper_v2.py  test_wallet_keystore.py
zetryn_bot/: __init__.py  __main__.py  config.py  logger_setup.py
zetryn_bot/adapters/: __init__.py  token_input.py
zetryn_bot/api/: __init__.py  app.py  solprice.py
zetryn_bot/api/static/: index.html
zetryn_bot/api/static/assets/: index-BaQUO60t.css  index-lLfn7Hvv.js
zetryn_bot/db/: __init__.py  ai_activity_repo.py  engine.py  memory_store.py  models.py  position_repo.py  risk_repo.py
zetryn_bot/execution/: __init__.py  executor.py  jupiter.py  lifecycle.py  live.py  position.py  pumpcurve.py  risk.py  rpc.py
zetryn_bot/models/: __init__.py  token.py
zetryn_bot/notify/: __init__.py  format.py  heartbeat.py  log_bridge.py  protocol.py  telegram.py
zetryn_bot/pipeline/: __init__.py  enrich.py  runner.py  sinks.py
zetryn_bot/routing/: __init__.py  gates.py  graduation.py  launch_memory.py  router.py
zetryn_bot/runtime/: __init__.py  dedup.py  llm.py  orchestrator.py  registry.py
zetryn_bot/scanners/: __init__.py  _common.py  birdeye.py  dexscreener.py  geckoterminal.py  gmgn_openapi.py  helius.py  jupiter.py  protocol.py  pumpfun.py  raydium.py  rugcheck.py  telegram.py  twitter.py
zetryn_bot/scanners/enrichers/: __init__.py  gmgn_openapi.py  helius.py  jupiter.py  pumpfun_meta.py  rugcheck.py  twitter.py
zetryn_bot/storage/: __init__.py  redis_client.py
zetryn_bot/utils/: __init__.py  key_pool.py  supervisor.py
zetryn_bot/wallet/: __init__.py  keystore.py
