[build-system]
# Pin hatchling<1.27 — see zetryn-trading CHANGELOG v1.0.0 entry. The 1.27+
# release emits Metadata-Version 2.4 with a PEP 639 'License-File:' field
# that PyPI Warehouse still rejects as of mid-2026. Unpin once PyPI catches up.
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "zetryn-bot"
version = "0.11.1"
description = "Solana memecoin scanner sources and bot scaffolding — the I/O companion to zetryn-trading. Phase 1 scaffolding (scanner sources only)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Zetryn AI", email = "team@zetryn.com" },
]
keywords = [
    "ai-agent",
    "bot",
    "memecoin",
    "scanner",
    "solana",
    "trading",
    "zetryn",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    # Async & HTTP
    "aiohttp>=3.10",
    "asyncio-throttle>=1.0",
    "websockets>=10.4",
    "curl-cffi>=0.7",           # browser TLS impersonation for GMGN (bypass Cloudflare Bot Fight)
    "httpx>=0.27",
    "tenacity>=9.0",

    # Data validation + config
    "pydantic>=2.7",
    "pydantic-settings>=2.5",

    # Redis transport
    "redis[hiredis]>=5.1",
    "orjson>=3.10",

    # Env loading
    "python-dotenv>=1.0",

    # Logging
    "loguru>=0.7",

    # Social-source scanners
    "telethon>=1.40",                                           # Telegram channel scraper
    "twitter_login @ git+https://github.com/d60/twitter_login.git",  # Twitter scraper (no pypi)
    "nltk>=3.8",                                                # VADER sentiment for twitter scanner

    # Decision framework — live on PyPI since v1.0.0 (2026-06-28), no git pin needed.
    # >=1.2.0: market_gate accepts 0 thresholds, resolver splits CSV keys,
    # alert/watch thresholds enforced, CalibrationMap + replay bridge available.
    "zetryn-trading>=1.3.0",

    # Wallet + live execution (M5)
    "solders>=0.21",            # Keypair, VersionedTransaction (Rust bindings, sign locally)
    "solana>=0.34",             # AsyncClient — RPC submission + confirmation
    "base58>=2.1",
    "cryptography>=42.0",       # Fernet — encrypted keyfile at rest

    # Persistence (M6)
    "sqlalchemy[asyncio]>=2.0", # async ORM + Core; one stack for models + queries
    "asyncpg>=0.29",            # PostgreSQL async driver under SQLAlchemy
    "alembic>=1.13",            # schema migrations (autogenerate from db/models.py)
]

[project.optional-dependencies]
# Dashboard API (M9) — installed in the image; the bot process doesn't import it.
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
zetryn-bot = "zetryn_bot.__main__:main"

[project.urls]
Homepage = "https://zetryn.com"
Repository = "https://github.com/zetryn-ai/bot"
Issues = "https://github.com/zetryn-ai/bot/issues"
"Framework (zetryn-trading)" = "https://github.com/zetryn-ai/ai-agent"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["zetryn_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear (mutable defaults, etc.)
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # simplify (no-else-return, etc.)
    "RUF",  # ruff-specific
]
# TCH (type-checking-only imports) intentionally excluded: most scanner modules
# import aiohttp / loguru / websockets / telethon at runtime (async with, .bind,
# etc.), so the TCH001/002/003 rules misfire. Reintroduce per-file via per-file
# ignores once we have a settled split between type-only and runtime imports.
ignore = [
    "E501",   # line-too-long — formatter handles it
    "B008",   # function call in default arg — pydantic Field uses this
    "SIM105", # try-except-pass — fine as-is for "best effort, no recovery" parsing
]

[tool.ruff.lint.isort]
known-first-party = ["zetryn_bot"]

[tool.ruff.format]
quote-style = "double"
